minor UI fix
I widened the score box because it was too narrow for when you reached
two digits. (it won't accomodate 3 digits now either, so I'll re-work it
in time)

--- a/css/vectris.css
+++ b/css/vectris.css
@@ -55,7 +55,7 @@ section {
 }
 
 #game .game-ui {
-    width: 320px;
+    width: 350px;
     margin: auto;
     display: block;
 }
@@ -67,7 +67,7 @@ section {
 #game .game-ui .score-box {
     border: 1px solid rgb(206, 138, 138);
     background-color: rgb(255, 163, 0);
-    width: 30px;
+    width: 50px;
     margin-left: 16px;
     float: left;
 }
